--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".view.NavBotDialog"
+            android:name=".view.StudentActivity"
             android:exported="false" />
         <activity
-            android:name=".view.UserActivity"
+            android:name=".view.ProfessorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.CoordinatorActivity"
             android:exported="false" />
         <activity
             android:name=".view.LoginActivity"
