--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".view.EditStudentActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.StartActivity"
             android:exported="true">
             <intent-filter>
