--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.CoordinatorStudentsActivity"
+            android:exported="false"/>
+        <activity
             android:name=".view.EditProfessorActivity"
             android:exported="false" />
         <activity
