--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".view.CoordinatorProfessorsActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.CoordinatorStudentsActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".view.EditProfessorActivity"
             android:exported="false" />
