--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             android:name=".view.CoordinatorSubjectsActivity"
             android:exported="false" />
         <activity
+            android:name=".view.EditGradeActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.CoordinatorCourseActivity"
             android:exported="false" />
         <activity
