--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
             android:name=".view.EditCourseActivity"
             android:exported="false" />
         <activity
+            android:name=".view.EditAttendanceActivity"
+            android:exported="false"/>
+        <activity
             android:name=".view.StudentActivity"
             android:exported="false" />
         <activity
